--- a/index.html
+++ b/index.html
@@ -137,14 +137,8 @@
 
     #open,
     #close {
-      cursor: pointer;
-      width: 200px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      text-align: center;
-      padding: 12px;
-      margin: 16px auto 0;
-      background: #4caf50;
+      cursor:pointer;
+      background: black;
       color: white;
     }
 
@@ -185,6 +179,15 @@
     #modal.hidden {
       transform: translate(0, -1200px);
     }
+
+    #modal iframe{
+      position:absolute;
+      top:0;
+      left:0;
+      width:100%;
+      height:100%;
+    }
+
 
     #select-file {
       z-index: 12;
@@ -231,6 +234,7 @@
 
   <div id="network-graph">
   </div>
+
   <script>
     remoteStorageURL = "https://raw.githubusercontent.com/ArbaVojaganto/arba-vojaganto/main/"
   </script>
@@ -315,4 +319,26 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 ```
 
+```
+  
+Copyright (c) 2014 Masafumi Oyamada
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in
+all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+THE SOFTWARE.
+```
 -->
